Fix for dropdown-menu losing absolute position on small screens

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,3 +1,7 @@
+.app-navbar .dropdown-menu{
+  position: absolute !important;
+}
+
 .navbar li {
   height: 40px;
 }
